# videometer-toolbox-python

./: .gitignore  Changelog.txt  LICENSE.txt  README.md  nuget.config.template  pyproject.toml  setupHelper.py  test.py
.github/workflows/: docs.yml
TestData/: 1c8f82ed-2ede-48c7-a0be-4978f282a6ea.hips  test_PFRGB.hips
TestData/compression/: TestEverythingImage_VeryHighCompression.hips
docs/: blob_ml_tutorial.ipynb  training_onnx_models.ipynb
docs/design_plans/: dll_management_nuget_pipeline.md  hips_pure_python_implementation.md
docs/source/: conf.py  index.rst  usage.md
docs/source/api/: config.rst  hips.rst  hips_core.rst  modules.rst  vm_utils.rst
src/videometer/: BlobDatabase.py  HelpFunctions.py  __init__.py  __main__.py  config.py  dll_provision.py  dlls.lock.json  hips.py  hips_core.py  new.py  setupHelper.py  setup_helper.py  videometer.py  vm_utils.py  vm_utils_clr.py  vmutils.py
src/videometer/tests/: test.py
src/videometer/tests/TestImages/: 2DGaussianSideBySide.hips  TestEverythingImage_HighQuality.hips  calibratedImage.hips
src/videometer/tests/TestImages/TestImagesWriting/: WritingTest_Arr.hips  WritingTest_TestEverythingImage_HighCompression.hips  WritingTest_TestEverythingImage_HighQuality.hips  WritingTest_TestEverythingImage_Uncompressed.hips  WritingTest_TestEverythingImage_VeryHighCompression.hips  WritingTest_TestEverythingImage_VeryHighQuality.hips
tests/: conftest.py  test_BlobDatabase.py  test_hips_core.py  test_hips_core_main.py  test_hips_header_compatibility.py  test_hips_write.py  test_imageClass.py  test_legacy_compatibility_write.py  test_main.py  test_quantization_parity.py  test_reference_pixels.py  test_xml_compatibility.py
tests/TestImages/: TestEverythingImage_HighCompression.hips  TestEverythingImage_Uncompressed.hips  TestEverythingImage_VeryHighQuality.hips
tests/TestImages/TestImagesWriting/: WritingTest_TestEverythingImage_Uncompressed.hips
tools/: build_release.py  fetch_dlls.py  package_dll_bundle.py
