[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >61",
    "wheel",
    "cython",
    "numpy >= 1.19.1"]


[project]
name = "videometer"
version = "0.0.9"
authors = [ { "name"="Videometer A/S" } ]
maintainers = [
    {"name"="Aske", "email"="asc@videometer.com" },
    {"name"="Jonas", "email"="jmk@videometer.com" } ]
description = "Videometer python HIPS image reader and writer for Multispectral images"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies=[
    "numpy >= 1.19.1",
    "matplotlib >= 3.4.3",
    "pythonnet",
    "parameterized"]


[project.urls]
Homepage = "https://videometer.com"

[tool.setuptools.packages.find]
where = ["src"]





