[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >61",
    "wheel",
    "cython",
    "numpy >= 1.19.1"]


[project]
name = "videometer"
version = "1.0.3"
authors = [ { "name"="Videometer A/S" } ]
maintainers = [
    {"name"="Aske", "email"="asc@videometer.com" }]
description = "Videometer python HIPS image reader and writer for Multispectral images"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies=[
    "numpy >= 1.19.1",
    "pandas",
    "matplotlib >= 3.4.3",
    "pythonnet",
    "parameterized",
    "requests"]


[project.urls]
Homepage = "https://videometer.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"videometer.tests.TestImages" = ["*.hips"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"  # Great for checking code coverage
]

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"